sticky hover on mobile fixed

--- a/src/Calc.scss
+++ b/src/Calc.scss
@@ -1,3 +1,6 @@
+
+// Mobile first
+
 $text-color: #e8ddb5;
 $muted-text-color: #b2c9ab;
 $app-bg-color: #364958;
@@ -73,13 +76,12 @@ button {
     font-family: 'Quicksand', sans-serif;
     font-weight: 300;
     padding: 0.8em;
-    transition: all 0.5s ease-in-out;
+    transition: all 300ms ease-in-out;
 
     &::before {
         content: '';
         z-index: -1;
         clip-path: circle(0% at 50% 50%);
-        transition: all 0.5s ease-in-out;
         width: 100%;
         height: 100%;
         position: absolute;
@@ -87,32 +89,19 @@ button {
         left: 0;
         opacity: 0.4;
         background: $hover-color;
-
+        transition: all 300ms ease-in-out;
     }
 
     &:active {
         &::before {
             clip-path: circle(30%);
             opacity: 1;
-            animation: highlight-button 100ms ease-in-out;
-            transition: all 100s ease-in-out;
         }
     }
 
 }
 
-//hover for screens
-@media(hover: hover) and (pointer: fine) {
-    button {
-        &:hover {
-            &::before {
-                clip-path: circle(30%);
-                opacity: 1;
-                cursor: pointer;
-            }
-        }
-    }
-}
+
 
 .pads--numbers>button {
     width: 33.33%;
@@ -208,11 +197,6 @@ button {
     .historyItem {
         padding: 0.5rem;
         border-radius: 73% 27% 100% 0% / 67% 80% 20% 33%;
-
-        &:hover {
-            background: linear-gradient(to right, $bg-color, $hover-color);
-            cursor: pointer;
-        }
     }
 }
 
@@ -307,5 +291,38 @@ button {
 @keyframes highlight-button {
     to {
         background: $contrast-color;
+    }
+}
+
+//For screens
+@media(hover: hover) and (pointer: fine) {
+    button {
+        transition: all 0.5s ease-in-out;
+        &::before {
+            transition: all 0.5s ease-in-out;
+        }
+        &:hover {
+            &::before {
+                clip-path: circle(30%);
+                opacity: 1;
+                cursor: pointer;
+                transition: all 0.5s ease-in-out;
+            }
+
+            &:active {
+                &::before {
+                    clip-path: circle(30%);
+                    opacity: 1;
+                    animation: highlight-button 300ms ease-in-out;
+                }
+            }
+        }
+    }
+
+    .historyItem {
+        &:hover {
+            background: linear-gradient(to right, $bg-color, $hover-color);
+            cursor: pointer;
+        }
     }
 }
